feat: agg reporte de ventas general
